fix(Projects): Center align project filter

--- a/src/app/projects/projects.component.sass
+++ b/src/app/projects/projects.component.sass
@@ -5,7 +5,10 @@
   justify-content: flex-start
 
 .projects-options
-  flex: 0
+  flex: 1
+  display: flex
+  flex-direction: column
+  align-items: center
   margin-bottom: 15px
 
 .projects-container
